
  Developers side :
  -----------------

    Non breaking changes :
    ----------------------
        # The creation forms for HeaderFilter & EntityFilter now accept models with digits at the end of their name.
        # Apps :
            * Billing :
                - The Relation cache is now used in 'Line.related_document'.
                - In 'models.Base._pre_delete()', the RelationType ID 'REL_OBJ_LINE_RELATED_ITEM' is not used anymore.


== Version 2.5.19 ==

  Users side :
  ------------
    # A content visibility issue on popover opening has been fixed.
    # Apps :
        * Creme_config :
            - When you emptied your bricks configuration for "My page" (default or owned)
              with the form, the configuration displayed a ugly "BLOCK" line.
              When you tried to edit this configuration, the form did not propose any choice.

  Developers side :
  -----------------

    Non breaking changes :
    ----------------------
        # The display of 'creme_core.forms.base.CremeEntityForm.forced_relations_info'
          was too much escaped with several relationships.
        # The base form-field 'creme_core.forms.fields.UnionField' did not raise an error
          when a required instance was cleaned with empty sub-data & non required sub-fields.


== Version 2.5.18 ==

  Users side :
  ------------
    # Apps :
        * Opportunities :
            - The title of the brick which displays related Opportunities for Contact/Organisation has been improved.

  Developers side :
  -----------------

    Breaking changes :
    ------------------
        - The Job registry now raises an exception when the class attribute "id" is too long
          (& so cannot be stored in the field "Job.type_id").


== Version 2.5.17 ==

  Users side :
  ------------
    # Apps :
        * Emails :
            - The email form uses HTML line breaks when the HTML body is copied
              from the plain text body.

  Developers side :
  -----------------
