@@ -166,6 +166,10 @@ class Base(CremeEntity):
                     # REL_OBJ_LINE_RELATED_ITEM,
                 ],
                 subject_entity=self.id):
+            # NB: see billing.signals.manage_line_deletion().
+            #     We avoid to compute the total at each deletion because the
+            #     instance is totally deleted, so its slow & useless.
+            relation._avoid_billing_total_update = True
             relation._delete_without_transaction()
 
         for line in lines:
